[tool.poetry]
name = "cs-essentials"
version = "0.1.0"
description = "Computer Science essentials."
authors = ["Leo Schleier <43878374+leoschleier@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["cs_essentials", "tests"]
pythonVersion = "3.12"

[tool.ruff]
fix = true
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Use of typing.Any  
    "COM812",  # Missing trailing comma (formatter)
    "ISC001",  # Single line implicit string concatenation (formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401"]  # Unused import
"tests/*" = ["S101"]  # Use of assert detected

