[project]
name = "cs-essentials"
version = "0.1.0"
description = "Computer Science essentials"
authors = [
    {name = "Leo Schleier", email = "<43878374+leoschleier@users.noreply.github.com>"},
]
license = "MIT"
readme = "README.md"
requires-python = "==3.13.*"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["cs_essentials", "tests"]
pythonVersion = "3.13"

[tool.ruff]
fix = true
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Use of assert detected


